--- a/package.json
+++ b/package.json
@@ -1,19 +1,37 @@
 {
   "name": "kerejeh-tea",
   "version": "1.1.4",
-  "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/kerejeh/kerejeh-tea.git"
+  "dependencies": {
+    "react": "^18",
+    "react-dom": "^18",
+    "next": "14.1.3"
+  },
+  "devDependencies": {
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.3"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/kerejeh/kerejeh-tea/issues"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kerejeh/kerejeh-tea.git"
+  },
   "homepage": "https://github.com/kerejeh/kerejeh-tea#readme"
 }
+
